// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder concerns renders progress note popup 1`] = `
<div
  className="background"
>
  <div
    className="content noContentPadding"
  >
    <div>
      <div
        className="topBar"
      >
        <div
          className="topBarLabel"
        >
          Progress Note: 
        </div>
        <div
          className="closeButton"
          onClick={[Function]}
        />
      </div>
      <div
        className="middleBar"
      >
        <div
          className="patientContainer"
        >
          <div
            className="patientPhoto"
            style={
              Object {
                "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
              }
            }
          />
          <div
            className="patientContainerRight"
          >
            <div
              className="patientName"
            >
              Unknown
            </div>
          </div>
        </div>
        <div
          className="button"
          onClick={[Function]}
        >
          Sign and Submit
        </div>
      </div>
      <div
        className="tabs"
      >
        <a
          className="tab selectedTab"
          onClick={[Function]}
        >
          Context
        </a>
        <a
          className="tab"
          onClick={[Function]}
        >
          Activity
        </a>
        <a
          className="tab"
          onClick={[Function]}
        >
          Tasks
        </a>
      </div>
      <div>
        <div
          className="encounterTypeContainer"
        >
          <div
            className="encounterTypeLabel"
          >
            Select encounter type:
          </div>
          <select
            className="encounterTypeSelect"
            onChange={[Function]}
            value={undefined}
          >
            <option
              disabled={true}
              hidden={true}
              value=""
            >
              Select an encounter type template
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`builder concerns renders progress note popup with templates renders progress note 1`] = `
<Unknown
  style="no-padding"
  visible={true}
>
  <div>
    <div
      className="topBar"
    >
      <div
        className="topBarLabel"
      >
        Progress Note: 
        Progress Note Template Title
      </div>
      <div
        className="closeButton"
        onClick={[Function]}
      />
    </div>
    <div
      className="middleBar"
    >
      <div
        className="patientContainer"
      >
        <div
          className="patientPhoto"
          style={
            Object {
              "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
            }
          }
        />
        <div
          className="patientContainerRight"
        >
          <div
            className="patientName"
          >
            Bob Smith
          </div>
          <FormattedRelative
            updateInterval={10000}
            value="2017-09-07T13:45:14.532Z"
          >
            [Function]
          </FormattedRelative>
        </div>
      </div>
      <FormattedMessage
        id="patient.submitProgressNote"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
    </div>
    <div
      className="tabs"
    >
      <FormattedMessage
        id="patient.context"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
      <FormattedMessage
        id="patient.activity"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
      <FormattedMessage
        id="patient.tasks"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
    </div>
    <Apollo(Apollo(Apollo(ProgressNoteContext)))
      onChange={[Function]}
      patientId="patient-id"
      progressNoteId="progress-note-id"
      progressNoteTemplateId="progress-note-template-id"
      progressNoteTemplates={
        Array [
          Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "deletedAt": null,
            "id": "progress-note-template-id",
            "title": "Progress Note Template Title",
            "updatedAt": "2017-09-07T13:45:14.532Z",
          },
        ]
      }
    />
  </div>
</Unknown>
`;

exports[`builder concerns renders progress note popup with templates renders progress note popup with templates 1`] = `
<Unknown
  style="no-padding"
  visible={true}
>
  <div>
    <div
      className="topBar"
    >
      <div
        className="topBarLabel"
      >
        Progress Note: 
      </div>
      <div
        className="closeButton"
        onClick={[Function]}
      />
    </div>
    <div
      className="middleBar"
    >
      <div
        className="patientContainer"
      >
        <div
          className="patientPhoto"
          style={
            Object {
              "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
            }
          }
        />
        <div
          className="patientContainerRight"
        >
          <div
            className="patientName"
          >
            Bob Smith
          </div>
        </div>
      </div>
      <FormattedMessage
        id="patient.submitProgressNote"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
    </div>
    <div
      className="tabs"
    >
      <FormattedMessage
        id="patient.context"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
      <FormattedMessage
        id="patient.activity"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
      <FormattedMessage
        id="patient.tasks"
        values={Object {}}
      >
        [Function]
      </FormattedMessage>
    </div>
    <Apollo(Apollo(Apollo(ProgressNoteContext)))
      onChange={[Function]}
      patientId="patient-id"
      progressNoteId={undefined}
      progressNoteTemplateId={undefined}
      progressNoteTemplates={
        Array [
          Object {
            "createdAt": "2017-09-07T13:45:14.532Z",
            "deletedAt": null,
            "id": "progress-note-template-id",
            "title": "Progress Note Template Title",
            "updatedAt": "2017-09-07T13:45:14.532Z",
          },
        ]
      }
    />
  </div>
</Unknown>
`;

exports[`renders timeline 1`] = `
<div>
  <div
    className="sortSearchBar"
  >
    <div
      className="sort"
    >
      <div
        className="sortLabel"
      >
        Sort by:
      </div>
      <div
        className="sortDropdown"
      >
        <select
          value="Newest first"
        >
          <option
            value="Newest first"
          >
            Newest first
          </option>
        </select>
      </div>
      <div
        className="search searchLeftPad"
      >
        <input
          placeholder="Search by user or keywords"
          required={true}
          type="text"
        />
      </div>
    </div>
    <div
      className="saveButtonGroup"
    >
      <div
        className="button saveButton"
        onClick={[Function]}
      >
        <span>
          New progress note
        </span>
      </div>
    </div>
  </div>
  <div
    className="encountersPanel"
  >
    <div
      className="encounters"
    >
      <div
        className="encountersLoading"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    className="lightbox hidden"
  >
    <div
      className="background"
      onClick={[Function]}
    />
    <div
      className="foreground"
    >
      <div
        className="viewer"
        style={
          Object {
            "backgroundImage": "none",
          }
        }
      >
        <div
          className="overlay"
        >
          <div
            className="header"
          >
            <div
              className="imageCount"
            >
              <div
                className="imageCountIcon"
              />
              <div>
                1 
                <span>
                  of
                </span>
                 0 
                <span>
                  images
                </span>
              </div>
            </div>
            <div
              className="close"
              onClick={[Function]}
            />
          </div>
          <div
            className="controls"
          >
            <div
              className="backArrow hidden"
              onClick={[Function]}
            />
            <div
              className="nextArrow"
              onClick={[Function]}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;
